# YOLOv5-ZED-Obstacle-Avoidance

./: README.md
Dataset/Cans/: README.dataset.txt  README.roboflow.txt  data.yaml
Dataset/Cans/test/labels/: youtube-0_jpg.rf.ef8548da237001c50879ab7d8e4e43b9.txt  youtube-102_jpg.rf.9b2541ce72a985188f966f7cc2e36e89.txt  youtube-110_jpg.rf.5d8868124e00f8989635b48089fc916b.txt  youtube-124_jpg.rf.56bd633252653458cde648293b573778.txt  youtube-130_jpg.rf.2344a5f3618040d683af2de519eaecf8.txt  youtube-13_jpg.rf.b5134bd2c458d8016bee8de1d0ab17a2.txt  youtube-13_jpg.rf.f58f367ab12c6755633a0f7abef0b174.txt  youtube-18_jpg.rf.083d72394123dbdbed3978aa31b0276a.txt  youtube-18_jpg.rf.e7d49c47bb7b7a870a784888032b0e44.txt  youtube-19_jpg.rf.17461103a3533fa690357371629c094b.txt  youtube-23_jpg.rf.2c5cd8af74f5ff99b136b5255f57daca.txt  youtube-24_jpg.rf.72cf23e24588285950c22617432e5b2a.txt  youtube-26_jpg.rf.473e7b62b204d5a2b44dc6fb1d3174f8.txt  youtube-32_jpg.rf.7f1aad6b385f6c2b9e4aa7f3beba5891.txt  youtube-37_jpg.rf.a39241755fa0cdb56eefd90e66ee4a7b.txt  youtube-39_jpg.rf.6164a465e7c9b9efc0c19b1754358fcd.txt  youtube-3_jpg.rf.27b2e0eaf48e924b1658b1bc37b047de.txt  youtube-40_jpg.rf.784e14c017529a41922a33a8deddc729.txt  youtube-41_jpg.rf.e41d72b599d91b4dbc26465e3313e048.txt  youtube-43_jpg.rf.d49e7384956d3fa11dcb2f353305f12d.txt  youtube-48_jpg.rf.c0d28576ffce7c2a70e67fa7cf8acbc1.txt  youtube-53_jpg.rf.f60cda4c8b8550292e2f399e7c8c661c.txt  youtube-54_jpg.rf.504d10e9d9a105fe2d2b4e674cd9c81d.txt  youtube-55_jpg.rf.953ffbb125eb609397c930536a1ef5fb.txt  (+16 more)
Dataset/Cans/train/: labels.cache
Dataset/Cans/valid/: labels.cache
Dataset/Office-obstacles/: README.roboflow.txt  data.yaml
YOLOv5-7.0/: model-trainer.ipynb
YOLOv5-7.0/datasets/Cans-1/: README.dataset.txt  README.roboflow.txt  data.yaml
YOLOv5-7.0/datasets/Office-obstacles-3/: README.dataset.txt
object-detection/: CMakeLists.txt  yolov5_det.cpp  yolov5_ser.cpp
object-detection/include/: utils.h  yololayer.h
unreal-engine/: Makefile  ZED_Detection.uproject
unreal-engine/Config/: DefaultEngine.ini  DefaultGame.ini
unreal-engine/Content/: CansMap.umap  TestMap.umap
unreal-engine/Content/Materials/: M_Backpack.uasset  M_Chair.uasset  M_Lamp.uasset  M_OranSoda.uasset  M_Pepsi.uasset  M_Sprite.uasset  M_Stool.uasset
unreal-engine/Content/Objects/: Backpack.uasset  Lamp.uasset  Stool.uasset  WoodChair.uasset
unreal-engine/Content/VRSpectator/: EVRSpectatorMode.uasset  RT_VRSpectator.uasset  VRSpectator.uasset
unreal-engine/Source/: ZED_Detection.Target.cs  ZED_DetectionEditor.Target.cs
unreal-engine/Source/ZED_Detection/: Detection.cpp  Detection.h  DetectionRepository.cpp  DetectionRepository.h  SceneManager.cpp  SceneManager.h  TCP_Server.cpp  TCP_Server.h  VirtualObstacle.cpp  VirtualObstacle.h  ZED_Detection.Build.cs  ZED_Detection.cpp  ZED_DetectionGameModeBase.cpp  ZED_DetectionGameModeBase.h
(+1616 files in other folders)
